# MVS_HugeNumberCalculator

./: CMakeLists.txt  main.c
UseHugeNumber/Type/: HugeInt.c
